[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyVideoKit-Libs"
version = "0.3.0"
description = "Python library for FFmpeg-based video processing"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Evilchuck666", email = "carlos.martinez.medina1992@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyvideokit_libs"]
